@@ -2,9 +2,9 @@
 #DBG += -pg
 CC	= gcc
 MAXE = -fmax-errors=8
-CFLAGS = -O2 -Wall $(shell sdl-config --cflags) $(DBG) $(MAXE)
+CFLAGS = -O2 -Wall $(shell sdl2-config --cflags) $(DBG) $(MAXE)
 LDFLAGS = $(DBG)
-LDLIBS = $(shell sdl-config --libs) -lm -lSDL_image
+LDLIBS = $(shell sdl2-config --libs) -lm -lSDL2_image
 
 # ftgrays standalone
 CFLAGS += -D_STANDALONE_
